--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+span[class*="ion-md-"]{
+  padding: 10px;
+  font-size: 25px;
+}
