added submenu routs + extra colors + extra animations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <section>
     <app-navigation></app-navigation>
   <router-outlet></router-outlet>
+    <app-about-us></app-about-us>
 </section>
 
