--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,11 +1,29 @@
-<section id="navigation">
-    <span id="hamburger-menu" class="icon ion-md-menu" (click)="toggle()"></span>
+<section [@scroll]="navbarState" [ngClass]="{'open': navOpen}" id="navigation">
+    <a routerLink="/home"><img [ngClass]="{'open': navOpen}" [@logoScroll]="logoState" id="logo"
+                               src="../../../assets/images/logo.png"></a>
+    <div id="hamburger-menu" [ngClass]="{'open': navOpen}" (click)="toggle()">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    
     <ul [ngClass]="{'open': navOpen}">
-        <li><a routerLink="/home" (click)="toggle()">Home</a></li>
+
+        <li><a routerLink="/home" (click)="navigate()">HOME</a></li>
 
         <li *ngFor="let link of links">
-            <a [routerLink]="link.path" (click)="toggle()">{{ link.text }}</a>
+            <a [routerLink]="link.path" (click)="toggleSubMenu()">{{ link.text }}</a>
+            <div class="sub-menu" [ngClass]="{'open': subMenuOpen}">
+                <p *ngFor="let child of link.children">
+                    <a [routerLink]="child.path" (click)="navigate()">{{child.text}}</a>
+                </p>
+            </div>
         </li>
+
+        <li><a routerLink="/approach" (click)="navigate()">OUR APPROCHES</a></li>
+        <li><a routerLink="/products" (click)="navigate()">OUR PRODUCTS</a></li>
+        <li><a routerLink="/services" (click)="navigate()">OUR SERVICES</a></li>
+
 
     </ul>
 </section>
