fixed bug landing page and roll down navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <section>
     <app-navigation></app-navigation>
   <router-outlet></router-outlet>
-    <app-about-us></app-about-us>
+    <app-footer></app-footer>
 </section>
-
