--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -1,9 +1,21 @@
 @import "../../../assets/variables";
-section#landing-page{
-  padding:0;
+
+section#landing-page {
+  padding: 0;
   margin: 0;
-  background:  url("../../../assets/images/beer_bottles_liten.jpg") no-repeat;
-  height: 100vh;
-  width: 100vw;
   color: white;
+  height:auto;
+	min-height:100vh;
+	background-image:url("../../../assets/images/beer_bottles_liten.jpg");
+	background-size:cover;
+	background-position:center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .welcome-button{
+    background-color: $main-color;
+    color: white;
+    padding: 20px;
+  }
 }
