--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,38 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <img src="../../../assets/images/sticker_round.png" width="150px" height="150px">
+  <div class="footer-info">
+    <p>
+      New Crown Service Partners NV/SA
+    </p>
+
+    <table>
+      <tr>
+        <td>
+          Gansbroekstraat 27
+        </td>
+        <td>
+          Tel +2 3 434 92 69
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          B-2870 Puurs 
+        </td>
+        <td>
+          info@newcrownservice.com
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          Belgium
+        </td>
+        <td>
+          VAT BE 0682 902 665
+        </td>
+      </tr>
+    </table>
+  </div>
+
+</footer>
