--- a/src/app/pages/company/contact/contact.page.html
+++ b/src/app/pages/company/contact/contact.page.html
@@ -1,3 +1,22 @@
-<p>
-  contact works!
-</p>
+<article id="contact">
+    <h1>Contact Us</h1>
+
+    <p>
+        Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
+        Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
+        In pri natum appetere consectetuer, iusto salutatus id vix.
+        Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
+        Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
+        Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
+        In pri natum appetere consectetuer, iusto salutatus id vix.
+        Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
+        Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
+        In pri natum appetere consectetuer, iusto salutatus id vix.
+        Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
+        Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
+        Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
+        In pri natum appetere consectetuer, iusto salutatus id vix.
+    </p>
+
+
+</article>
