--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -1,6 +1,58 @@
-<section id="landing-page">
+<section id="landing-page" (window:resize)="onResize($event)">
 
-<div class="welcome-button">
-  Learn more about us
-</div>
+    <div class="index-banner">
+        <div class="welcome-text">
+            Global Experts in RGB
+            <p class="sub-title">
+                We give your machine a second life
+            </p>
+        </div>
+        <div class="welcome-button" routerLink="/company/about">
+            Learn more about us
+            <span class="icon ion-ios-arrow-forward"></span>
+        </div>
+    </div>
+
+    <div class="article">
+        <p>
+            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
+            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
+            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
+            In pri natum appetere consectetuer, iusto salutatus id vix.
+            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
+            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
+            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
+            In pri natum appetere consectetuer, iusto salutatus id vix.
+        </p>
+
+    </div>
+
+    <div class="article">
+        <p>
+            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
+            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
+            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
+            In pri natum appetere consectetuer, iusto salutatus id vix.
+            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
+            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
+            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
+            In pri natum appetere consectetuer, iusto salutatus id vix.
+        </p>
+
+    </div>
+
+    <div class="article">
+        <p>
+            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
+            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
+            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
+            In pri natum appetere consectetuer, iusto salutatus id vix.
+            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
+            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
+            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
+            In pri natum appetere consectetuer, iusto salutatus id vix.
+        </p>
+
+    </div>
+
 </section>
