--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,8 @@
-<section id="navigation-container" [ngClass]="{'open': navOpen}" (window:resize)="onResize($event)">
-    <div id="navigation">
-        <a routerLink="/home"><img [ngClass]="{'open': navOpen}" id="logo"
-                                   src="../../../assets/images/logo.png"></a>
+<section id="navigation-container" [ngClass]="{'open': navOpen}">
+
+    <div [@scroll]="navbarState"  [ngClass]="{'open': navOpen}"  id="navigation">
+        <a routerLink="/home"><img id="logo" [src] ="logoPath"></a>
+
         <div id="hamburger-menu" [ngClass]="{'open': navOpen}" (click)="toggle()">
             <span></span>
             <span></span>
@@ -9,24 +10,24 @@
         </div>
 
         <ul [ngClass]="{'open': navOpen}">
-            <li><a routerLink="/home" (click)="navigate()">HOME</a></li>
+            <li><a [@ulScroll]="navbarState" routerLink="/home" (click)="navigate()">Home</a></li>
             <li *ngFor="let link of links">
-                <a [routerLink]="link.path" (click)="toggleSubMenu(link)">{{ link.text }}</a>
-                <div *ngIf="isMobile" class="sub-menu" [ngClass]="{'open': subMenuOpen}">
+                <a [@ulScroll]="navbarState" [ngClass]="{'selected': (link === chosenLink) && subMenuOpen}" (click)="toggleSubMenu(link)">{{ link.text }}</a>
+                <div *ngIf="isMobile" class="sub-menu" [ngClass]="{'open': (link === chosenLink) && subMenuOpen}">
                     <p *ngFor="let child of link.children">
                         <a [routerLink]="child.path" (click)="navigate()">{{child.text}}</a>
                     </p>
                 </div>
             </li>
 
-            <li><a routerLink="/approach" (click)="navigate()">OUR APPROCHES</a></li>
-            <li><a routerLink="/products" (click)="navigate()">OUR PRODUCTS</a></li>
-            <li><a routerLink="/services" (click)="navigate()">OUR SERVICES</a></li>
+            <!--<li><a [@ulScroll]="navbarState" routerLink="/approach" (click)="navigate()">Our Approach</a></li>-->
+            <li><a [@ulScroll]="navbarState" routerLink="/products" (click)="navigate()">Our Products</a></li>
+            <li><a [@ulScroll]="navbarState" routerLink="/services" (click)="navigate()">Our Services</a></li>
         </ul>
     </div>
     <div *ngIf="chosenLink && !isMobile" class="sub-menu-desktop" [ngClass]="{'open': subMenuOpen}">
         <div class="sub-menu-desktop-description">
-            <p>Our Company</p>
+            <p>{{chosenLink.text}}</p>
         </div>
 
         <div  class="sub-menu-desktop-content">
