--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -3,19 +3,83 @@
 section#landing-page {
   padding: 0;
   margin: 0;
-  color: white;
-  height:auto;
-	min-height:100vh;
-	background-image:url("../../../assets/images/beer_bottles_liten.jpg");
-	background-size:cover;
-	background-position:center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .welcome-button{
-    background-color: $main-color;
+  .index-banner {
     color: white;
-    padding: 20px;
+    height: auto;
+    min-height: 100vh;
+    background-size: cover;
+    background: url("../../../assets/images/beer_bottles_liten.jpg") center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-image: linear-gradient(to bottom right, #002f4b, #dc4225);
+      opacity: .75;
+      z-index: 0;
+    }
+
+    .welcome-text {
+      z-index: 10;
+      color: $main-color;
+      font-size: 50px;
+      font-weight: bolder;
+
+      p.sub-title {
+        color: white;
+        font-weight: bold;
+        font-size: 30px;
+      }
+    }
+    .welcome-button {
+      z-index: 1;
+      cursor: pointer;
+      border-radius: 100px;
+      font-size: 1.2em;
+      background-color: $main-color;
+      color: white;
+      padding: 1em 1.5em 1em 1em;
+      position: relative;
+      .ion-ios-arrow-forward {
+        display: inline-block;
+        transition: left .5s ease-in-out;
+        padding-left: 2px;
+      }
+      &:hover {
+        .ion-ios-arrow-forward {
+          padding-left: 5px;
+        }
+      }
+    }
   }
+
+  .article {
+    padding: 2%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 25vh;
+    background-color: white;
+    &:nth-child(odd) {
+      background-color: $card-background-color;
+    }
+
+  }
+
+  @media (min-width: 768px) {
+    .index-banner{
+      align-items: flex-start;
+      padding-left: 10%;
+      }
+
+  }
+
 }
