--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -2,6 +2,11 @@ $main-color: #EC6407;
 $second-color: #687A8F;
 $third-color: #F7C331;
 $fourth-color: #DCC7AA;
+$footer-color: #DEDFE2;
 $card-background-color: #F7F8F9;
-$nav-bar-height: 100px;
+$nav-bar-height: 125px;
 $nav-bar-color: #999997;
+
+$font-size-extra-large: 2.5em;
+$font-size-large: 1.6em;
+$font-size-medium: 1.2em;
