--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./assets/variables";
 
 body{
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
 }
 span[class*="ion-md-"]{
   padding: 10px;
   font-size: 25px;
 }
+
+article {
+  padding: 2%;
+}
+
+h1{
+  font-size: $font-size-extra-large;
+  color: $main-color
+}
+h2{
+  font-size: $font-size-large;
+  color: white;
+}
+
