added extra config for github pages

--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -1,4 +1,4 @@
-<section id="landing-page" (window:resize)="onResize($event)">
+<section id="landing-page">
 
     <div class="index-banner">
         <div class="welcome-text">
