--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./assets/variables";
 
-body{
+html,body
+{
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
 }
+
 span[class*="ion-md-"]{
   padding: 10px;
   font-size: 25px;
