fixed navigation on landing page + fixed scrolling issue when navigating

--- a/src/app/pages/company/our-company.component.html
+++ b/src/app/pages/company/our-company.component.html
@@ -7,6 +7,12 @@
     </div>
 
 
+  <div #about>
     <app-about-us ></app-about-us>
-    <app-contact ></app-contact>
+  </div>
+
+<div #contact>
+  <app-contact ></app-contact>
+</div>
+
 </section>
