--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <section>
-    <app-navigation></app-navigation>
+    <app-mobile-navigation  *ngIf="isMobile"></app-mobile-navigation>
+    <app-desktop-navbar *ngIf="!isMobile"></app-desktop-navbar>
 
     <router-outlet></router-outlet>
 
