--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./assets/variables";
 
-html,body
-{
-  width: 100%;
-  height: 100%;
+body,
+html {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
+  //on mobile
+  @media (max-width: 767px) {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+  }
 }
 
-span[class*="ion-md-"]{
+span[class*="ion-md-"] {
   padding: 10px;
   font-size: 25px;
 }
@@ -21,12 +24,12 @@ article {
   padding: 2%;
 }
 
-h1{
+h1 {
   font-size: $font-size-extra-large;
-  color: $main-color
+  color: $main-color;
 }
-h2{
+
+h2 {
   font-size: $font-size-large;
   color: white;
 }
-
