added translation module

--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -15,14 +15,7 @@
 
     <div class="article">
         <p>
-            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
-            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
-            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
-            In pri natum appetere consectetuer, iusto salutatus id vix.
-            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
-            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
-            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
-            In pri natum appetere consectetuer, iusto salutatus id vix.
+            text is:  {{'welcome_text' | translate}}
         </p>
 
     </div>
