--- a/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
+++ b/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
@@ -112,8 +112,9 @@ section#navigation-container {
       }
     }
 
-    ul {
+    table {
       visibility: hidden;
+      align-items: center;
       padding: 0;
       margin: 0;
       top: $nav-bar-height;
@@ -129,14 +130,18 @@ section#navigation-container {
         background-color: white;
         opacity: 0.95;
         visibility: visible;
+        height: 100%;
         max-height: 100vh;
       }
 
       li {
-        padding: 1em;
-        text-align: center;
+        padding: 5% 0;
         list-style: none;
         cursor: pointer;
+
+        mat-icon{
+
+        }
 
         a {
           font-size: 1.2em;
