--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -8,7 +8,11 @@ section#landing-page {
     height: auto;
     min-height: 100vh;
     background-size: cover;
-    background: url("../../../assets/images/beer_bottles_liten.jpg") center;
+    background: url("../../../assets/images/beer_bottles_liten.jpg") no-repeat center center;
+    -webkit-background-size: cover; /* For WebKit*/
+    -moz-background-size: cover;    /* Mozilla*/
+    -o-background-size: cover;      /* Opera*/
+    background-size: cover;         /* Generic*/
     display: flex;
     flex-direction: column;
     justify-content: center;
