--- a/src/app/pages/company/our-company.component.html
+++ b/src/app/pages/company/our-company.component.html
@@ -7,12 +7,17 @@
     </div>
 
 
-  <div #about>
-    <app-about-us ></app-about-us>
-  </div>
+    <div #ourVision>
+        <app-our-vision></app-our-vision>
+    </div>
 
-<div #contact>
-  <app-contact ></app-contact>
-</div>
+    <div #whoWeAre>
+        <app-who-we-are></app-who-we-are>
+    </div>
+
+    <div #ourApproach>
+        <app-approach></app-approach>
+
+    </div>
 
 </section>
