--- a/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
+++ b/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
@@ -112,8 +112,9 @@ section#navigation-container {
       }
     }
 
-    table {
+    ul {
       visibility: hidden;
+      overflow: scroll;
       align-items: center;
       padding: 0;
       margin: 0;
@@ -123,7 +124,8 @@ section#navigation-container {
       right: 0;
       bottom: 0;
       width: 100%;
-      overflow: hidden;
+      display: flex;
+      flex-direction: column;
       transition: max-height 0.5s ease-in-out;
 
       &.open {
@@ -134,16 +136,32 @@ section#navigation-container {
         max-height: 100vh;
       }
 
+      #language{
+        border-top: 1px solid black;
+        width: 50%;
+
+        .selectedLanguage{
+          color: $main-color;
+          font-size: 1.3em;
+        }
+      }
+
       li {
-        padding: 5% 0;
+        padding: 10% 0;
+        width: 100%;
         list-style: none;
         cursor: pointer;
+        text-align: center;
+
+
 
         mat-icon{
-
+          text-align: right;
+          margin-right: 5%;
         }
 
         a {
+          width: 100%;
           font-size: 1.2em;
           color: black;
           font-weight: bold;
