added contact form

--- a/src/app/pages/company/our-company.component.html
+++ b/src/app/pages/company/our-company.component.html
@@ -1,3 +1,4 @@
+<script src="../../modules/app-routing/app-routing.module.ts"></script>
 <section id="company">
     <div class="banner">
         <div class="content">
