--- a/src/app/pages/our-contact-page/contact.page.html
+++ b/src/app/pages/our-contact-page/contact.page.html
@@ -1,22 +1,40 @@
-<article id="contact">
-    <h1>Contact Us</h1>
-
-    <p>
-        Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
-        Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
-        In pri natum appetere consectetuer, iusto salutatus id vix.
-        Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
-        Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
-        Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
-        In pri natum appetere consectetuer, iusto salutatus id vix.
-        Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
-        Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
-        In pri natum appetere consectetuer, iusto salutatus id vix.
-        Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
-        Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
-        Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
-        In pri natum appetere consectetuer, iusto salutatus id vix.
-    </p>
+<section id="contact">
 
 
-</article>
+    <div class="contact-banner">
+        <h1>Contact Us</h1>
+    </div>
+
+    <div class="contact-content">
+        <md-card-content>
+            <form id="regForm" flex flex-order="1" name="regForm">
+                <!--               <fieldset>
+                                <legend>Register</legend> -->
+
+                <md-form-field>
+                    <label for="fname">First Name</label>
+                    <input id="fname" name="fname"  maxlength="80"  required minlength="1">
+                </md-form-field>
+
+                <md-form-field>
+                    <label for="lname">Last Name</label>
+                    <input id="lname"name="lname" required minlength="1" maxlength="80" tabindex="2">
+                </md-form-field>
+
+                <md-form-field>
+                    <label for="email">Email Address</label>
+                    <input mdInput id="email" aria-label="Email Address" name="email" type="email"required  tabindex="4">
+                </md-form-field>
+            </form>
+
+            <div class="md-actions" flex-order="2">
+                <md-button aria-label="Send">Continue to Website.</md-button>
+            </div>
+        </md-card-content>
+    </div>
+
+            <div class="info">
+
+
+            </div>
+</section>
