--- a/src/app/pages/our-product-page/our-product-page.component.html
+++ b/src/app/pages/our-product-page/our-product-page.component.html
@@ -1,4 +1,10 @@
 <section id="products">
+  <div class="banner">
+      <div class="content">
+          <h1>Our products</h1>
+      </div>
+  </div>
+  <div class="categories">
     <div class="outer-div">
       <div class="content">
         <h1>Crown-Baele machines</h1>
@@ -11,13 +17,16 @@
       <div class="triangle"></div>
     </div>
     <div class="outer-div">
-        <div class="content">
-          <h1>Discover 3rd party machine</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In fermentum ut neque sed tempor. Praesent in orci sit amet odio viverra dictum vitae ac ex. Proin nibh felis, dignissim at malesuada condimentum, dapibus at nibh. Nunc molestie convallis risus, vitae bibendum elit tincidunt et. Integer mattis tortor ac porta mollis. Mauris quis ante sem. Maecenas mi risus, scelerisque elementum est vel, dictum rutrum ex. Morbi eget risus congue, molestie nisl vel, bibendum nisl. Ut feugiat erat vel erat venenatis rutrum. Proin lobortis mauris non fermentum volutpat.</p>
-          <a href="#" class="more"><button>
+      <div class="content">
+        <h1>Discover 3rd party machine</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In fermentum ut neque sed tempor. Praesent in orci sit amet odio viverra dictum vitae ac ex. Proin nibh felis, dignissim at malesuada condimentum, dapibus at nibh. Nunc molestie convallis risus, vitae bibendum elit tincidunt et. Integer mattis tortor ac porta mollis. Mauris quis ante sem. Maecenas mi risus, scelerisque elementum est vel, dictum rutrum ex. Morbi eget risus congue, molestie nisl vel, bibendum nisl. Ut feugiat erat vel erat venenatis rutrum. Proin lobortis mauris non fermentum volutpat.</p>
+        <a href="#" class="more">
+          <button>
             <span>&#x3c;&nbsp;</span>
             <span>Discover 3rd party products</span>
-          </button></a>
-        </div>
+          </button>
+        </a>
+      </div>
     </div>
+  </div>
 </section>
