--- a/src/app/pages/our-product-page/our-product-page.component.scss
+++ b/src/app/pages/our-product-page/our-product-page.component.scss
@@ -1,56 +1,62 @@
 @import "../../../assets/variables";
 #products {
-    margin-top: 125px;
+    margin-top: $nav-bar-height;
     background-color: white;
-    .outer-div {
-        display: flex;
-        flex-direction: column;
-        .content {
-            padding: 20px 40px;
-            
-            .more {
-                text-decoration: none;
-                button {
-                    background-color: $main-color;
-                    border: none;
-                    border-radius: 5px;
-                    padding: 7.5px;
-                    color: white;
-                    //margin-left: 20px;
-                    font-size: 15px;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
-                }
-            }
-        }
-        &:nth-child(2n+1) {
+    .banner{
+        background: url("../../../assets/images/people.jpg") center top;
+    }
+    .categories {
+        .outer-div {
+            display: flex;
+            flex-direction: column;
             .content {
-                background-color: $footer-color;
-            }
-        }
-        &:nth-child(2n) {
-            .content {
-                background-color: white;
-                h1, p {
-                    text-align: right;
-                }
+                padding: 20px 40px;
+                
                 .more {
+                    text-decoration: none;
                     button {
-                        margin-left: auto;
-                        //margin-right: 20px;
+                        background-color: $main-color;
+                        border: none;
+                        border-radius: 5px;
+                        padding: 7.5px;
+                        color: white;
+                        //margin-left: 20px;
+                        font-size: 15px;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-items: center;
+                        box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
                     }
                 }
             }
-        }
+            &:nth-child(2n+1) {
+                .content {
+                    background-color: $footer-color;
+                }
+            }
+            &:nth-child(2n) {
+                .content {
+                    background-color: white;
+                    h1, p {
+                        text-align: right;
+                    }
+                    .more {
+                        button {
+                            margin-left: auto;
+                            //margin-right: 20px;
+                        }
+                    }
+                }
+            }
 
-        .triangle {
-            width: 0;
-            height: 0;
-            border-style: solid;
-            border-width: 40px 100vw 0 0;
-            border-color: $footer-color transparent transparent transparent;
+            .triangle {
+                width: 0;
+                height: 0;
+                border-style: solid;
+                border-width: 40px 100vw 0 0;
+                border-color: $footer-color transparent transparent transparent;
+            }
         }
     }
 }
